--- a/package.json
+++ b/package.json
@@ -6,30 +6,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "npx tailwindcss init -p"
   },
   "dependencies": {
+    "highlight.js": "^11.9.0",
     "next": "14.0.0",
+    "openai": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "openai": "^4.0.0",
     "react-markdown": "^9.0.1",
-    "rehype-raw": "^7.0.0",
     "rehype-highlight": "^7.0.0",
-    "highlight.js": "^11.9.0"
+    "rehype-raw": "^7.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "autoprefixer": "^10.0.0",
-    "postcss": "^8.0.0",
-    "tailwindcss": "^3.3.0",
-    "@tailwindcss/typography": "^0.5.10",
-    "typescript": "^5.0.0",
-    "eslint": "^8.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "eslint-config-next": "14.0.0"
+    "@typescript-eslint/parser": "^6.0.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "14.0.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.15",
+    "typescript": "^5.0.0"
   }
 }
