Fix: 修复部署问题

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "npx tailwindcss build -o app/globals.css && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
