--- a/vercel.json
+++ b/vercel.json
@@ -1,24 +1,5 @@
 {
   "version": 2,
-  "regions": ["hnd1", "sin1"],
-  "cleanUrls": true,
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "X-Content-Type-Options",
-          "value": "nosniff"
-        },
-        {
-          "key": "X-Frame-Options",
-          "value": "DENY"
-        },
-        {
-          "key": "X-XSS-Protection",
-          "value": "1; mode=block"
-        }
-      ]
-    }
-  ]
+  "regions": ["hnd1"],
+  "cleanUrls": true
 } 
